# traductorma

./: README.md  pyproject.toml
tests/: test_traductorma.py
traductorma/: __main__.py
