[tool.poetry]
name = "traductorma"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
keywords = ["keyword", "another_keyword"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/manu97a/traductorma"
repository = "https://github.com/manu97a/traductorma"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
translate = "^3.5.0"

[tool.poetry.scripts]
traductorma = 'traductorma.__main__:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
